--- a/src/style.css
+++ b/src/style.css
@@ -34,6 +34,7 @@ textarea[name="user-input"] {
     box-shadow: 20px 20px 50px gray;
     font-size: 20px;
     border: 1px solid rgb(24, 89, 187);
+    margin: 35px 0;
 }
 
 .resultados{
@@ -42,19 +43,54 @@ textarea[name="user-input"] {
     text-decoration: double;
     list-style: none;
     columns: 2;
-    line-height: 30px;
+    line-height: 40px;
     text-align: left;
     display: grid;
     grid-template-columns: auto auto;
     gap: 35px;
-    left: 15vw;
+    left: 17vw;
     position: relative;
-    top: 70px;
+    top: 5px;
+    margin: -20px 0 0 0;
+    background: transparent;
     
 }
 .resultados>li{
     border: 2px solid rgb(14, 5, 139);
-    padding: 0 2em 0 0;
+    padding: 0 0px 0 0;
     border-radius: 20%;
+    width: 11em;
+    color: #200972;
+    text-shadow: 2px 2px 0 #90cce4, 4px 4px 0 #b1d65b;
 
+}
+
+#reset-button{
+    font-size: 28px;
+    background: #252525;
+    font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+    width: 200px;
+    height: 50px;
+    margin: 0 auto;
+    border: none;
+    outline: none;
+    border-radius: 5px;
+    background: #0f28b4;
+    color: #fff;
+    font-size: 1.3rem;
+    cursor: pointer;
+    box-shadow: inset 0 0 0 0 #e7eb08;
+    transition: ease-out 0.6s;
+    position: relative;
+    display: block;
+    left: 15vw;
+}
+#reset-button:hover{
+    box-shadow: inset 200px 0 0 0 #c7e618;
+    color: #000;
+}
+
+main{
+   position: absolute;
+   text-align: center;
 }
