--- a/src/style.css
+++ b/src/style.css
@@ -1,25 +1,20 @@
-.centrar{
-    text-align: -webkit-center;
-}
 
 header{
     text-align: -webkit-center;
     font-family: math;
-    color: white;
-    background-color: #9376E0;
+    color: rgb(47, 40, 40);
+    background-color: #fabfb7;
     max-width: -webkit-fill-available;
     margin: 50px;
     border: dashed 2px;
-    border-radius: 3px;
+    border-radius: 50px;
     border-color: white;
     width: 100%;
-  
 }
-
 .colorDeFondo{
-    background-image: url('https://i.pinimg.com/736x/bb/87/b1/bb87b128cb37e85e4c6f28ddf99639b3.jpg');
+    background-image: url('https://i.blogs.es/6e7601/paige-cody--esaigzemqu-unsplash/840_560.jpeg');
+    background-size: cover;
 }
-
 .ulEstilo{
     position: relative;
     display: flex;
@@ -31,9 +26,8 @@ header{
     justify-content: center;
     margin: 9px;
 }
-
 .liEstilo{
-    background-color: bisque;
+    background-color: #fabfb7;
     border-radius: 10px;
     border: solid 2px white;
     width: 186px;
@@ -43,11 +37,17 @@ header{
     padding: 9px;
     margin: 9px;
 }
-
+.cuadroResultado{
+    border: solid 2px;
+    border-color: antiquewhite;
+    background-color: #ffda9e;
+    color: rgb(47, 40, 40);
+    width: 80px;
+    height: 30px;
+}
 textarea[name="user-input"]{  
     text-align: -webkit-center;
     font-family: math;
-    color: #9376E0;
     margin: 50px;
     width: 1000px;
     height: 137px;
@@ -55,17 +55,17 @@ textarea[name="user-input"]{
     margin-top: 0px;
     margin-left: 150px;
     font-size: 18px;
-    color:darkmagenta;
+    color:rgb(47, 40, 40);
     font-family: math;
     border-radius: 24px;
-    border-color: #9376E0;
+    border-color: white;
+    background-color: #ffda9e;
 }
-
-
 #reset-button{  
-    border: dashed 2px  white; 
-    border-radius: 25px;
-    border-color:#9376E0;
+    border: dashed 2px;
+    border-radius: 20px;
+    border-color:white;
+    background-color: #ffda9e;
     width: 93px; 
     height: 50px; 
     font-family: math; 
@@ -76,12 +76,11 @@ textarea[name="user-input"]{
     margin-right: auto;
     display: grid;
 } 
-
 footer{
     text-align: -webkit-center;
     font-family: math;
-    color: white;
-    background-color: #9376E0;
+    color:rgb(47, 40, 40);
+    background-color: #fabfb7;
     max-width: -webkit-fill-available;
     margin: 50px;
     border: dashed 2px;
@@ -89,8 +88,3 @@ footer{
     border-color: white;
     width: 100%;
 }
-
-.separadoDeLineas{
-    line-height: 2;
-}
-
