--- a/src/style.css
+++ b/src/style.css
@@ -57,14 +57,15 @@ textarea[name="user-input"]{
     font-size: 18px;
     color:rgb(47, 40, 40);
     font-family: math;
+    border: solid 3px;
     border-radius: 24px;
-    border-color: white;
+    border-color: #f19b8f;
     background-color: #ffda9e;
 }
 #reset-button{  
     border: dashed 2px;
     border-radius: 20px;
-    border-color:white;
+    border-color: #f19b8f;
     background-color: #ffda9e;
     width: 93px; 
     height: 50px; 
@@ -80,7 +81,7 @@ footer{
     text-align: -webkit-center;
     font-family: math;
     color:rgb(47, 40, 40);
-    background-color: #fabfb7;
+    background-color: #f19b8f;
     max-width: -webkit-fill-available;
     margin: 50px;
     border: dashed 2px;
